# advent-of-code-2021

./: CONTENTS.md  Cargo.toml  README.md  download-input.bash  new-entry.bash  new_entry.bash  rust-toolchain.toml
src/: binary_diagnostic.rs  dive.rs  giant_squid.rs  hydrothermal_venture.rs  lanternfish.rs  lib.rs  seven_segment_search.rs  smoke_basin.rs  sonar_sweep.rs  syntax_scoring.rs  treachery_of_whales.rs  utils.rs
