[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
array2d = "0.2.1"
async-std = { version = "1.10.0", features = ["attributes"] }
derive_more = "0.99.17"
geo = "0.18.0"
itertools = "0.10.1"
log = "0.4.14"
ndarray = "0.15.4"
no-panic = "0.1.15"
nom = "7.1.0"
num = "0.4.0"
recap = "0.1.1"
reqwest = { version = "0.11.7", features = ["cookies"] }
ron = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
smart-default = "0.6.0"
structopt = { version = "0.3.25" }
strum = "0.23.0"
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread"] }
xdg = "2.4.0"
