[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
array2d = "0.2.1"
benchtest = "0.1.1"
derive_more = "0.99.17"
geo = "0.18.0"
grid = "0.6.0"
itertools = "0.10.1"
log = "0.4.14"
ndarray = "0.15.4"
num = "0.4.0"
recap = "0.1.1"
serde = { version = "1.0.130", features = ["derive"] }
strum = "0.23.0"
